--- a/package.json
+++ b/package.json
@@ -30,6 +30,26 @@
 		"url": "https://github.com/AbdeenM/megatrade-backend"
 	},
 	"scripts": {
+		"make": "babel -w --out-dir=build ./src",
+		"start": "nodemon build/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
-	}
+	},
+	"dependencies": {
+		"bcrypt": "^3.0.7",
+		"body-parser": "^1.19.0",
+		"express": "^4.17.1",
+		"mongoose": "^5.7.12",
+		"morgan": "^1.9.1"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.26.0",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-preset-env": "^1.7.0",
+		"nodemon": "^2.0.1"
+	},
+	"engines": {
+		"npm": ">= 6.0.0",
+		"node": ">= 10.0.0"
+	},
+	"private": true
 }
