--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	"dependencies": {
 		"bcrypt": "^3.0.7",
 		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"mongoose": "^5.7.12",
 		"morgan": "^1.9.1"
