--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"scripts": {
 		"make": "babel -w --out-dir=build ./src",
 		"start": "node build/index.js",
+		"dev": "nodemon build/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
