--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
+		"axios": "^0.19.0",
 		"bcrypt": "^3.0.7",
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
