--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"mongoose": "^5.7.12",
-		"morgan": "^1.9.1"
+		"morgan": "^1.9.1",
+		"twitter": "^1.7.1"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
