--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"handlebars": "^4.5.3",
 		"mongoose": "^5.7.12",
 		"morgan": "^1.9.1",
+		"node-schedule": "^1.3.2",
+		"nodemailer": "^6.4.2",
+		"socket.io": "^2.3.0",
 		"twitter": "^1.7.1"
 	},
 	"devDependencies": {
